--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -380,7 +380,7 @@ theorem_name = proof_term</code></pre>
 <ul>
 <li>否定 <code>¬_ = λ A → A → ⊥</code></li>
 <li>非空 <code>nonEmpty = λ A → ¬ ¬ A</code></li>
-<li>稳定 <code>Stable = λ A → nonEmpty A → A</code></li>
+<li>稳定 <code>stable = λ A → nonEmpty A → A</code></li>
 </ul>
 <h4 id="可判定">可判定</h4>
 <pre class="Agda"><a id="13511" class="Keyword">open</a> <a id="13516" class="Keyword">import</a> <a id="13523" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13561" class="Keyword">public</a>
