--- a/MetaLogic/Foundation.Relation.Nullary.Discrete.Instance.html
+++ b/MetaLogic/Foundation.Relation.Nullary.Discrete.Instance.html
@@ -27,7 +27,7 @@
 
 <main>
 <h1 id="元语言-离散性-实例">元语言 ▸ 离散性 ▸ 实例</h1>
-<p>本章建立了一些基本类型的离散性. 我们从 <code>Foundation</code>, 标准库中导入了相关定义和引理.</p>
+<p>本章建立了一些基本类型的离散性. 我们从 <code>Foundation</code> 和标准库中导入了相关定义和引理.</p>
 <pre class="Agda"><a id="122" class="Keyword">module</a> <a id="129" href="Foundation.Relation.Nullary.Discrete.Instance.html" class="Module">Foundation.Relation.Nullary.Discrete.Instance</a> <a id="175" class="Keyword">where</a>
 
 <a id="182" class="Keyword">open</a> <a id="187" class="Keyword">import</a> <a id="194" href="Foundation.Prelude.html" class="Module">Foundation.Prelude</a>
