--- a/MetaLogic/Foundation.Data.Nat.html
+++ b/MetaLogic/Foundation.Data.Nat.html
@@ -5,9 +5,10 @@
 
 <a id="67" class="Keyword">open</a> <a id="72" class="Keyword">import</a> <a id="79" href="Data.Nat.Base.html" class="Module">Data.Nat.Base</a> <a id="93" class="Keyword">public</a>
   <a id="102" class="Keyword">using</a> <a id="108" class="Symbol">(</a><a id="109" href="Data.Nat.Base.html#3308" class="Primitive Operator">_∸_</a><a id="112" class="Symbol">)</a>
+  <a id="116" class="Keyword">renaming</a> <a id="125" class="Symbol">(</a><a id="126" href="Data.Nat.Base.html#4331" class="Function Operator">_⊔_</a> <a id="130" class="Symbol">to</a> <a id="133" class="Function Operator">max</a><a id="136" class="Symbol">)</a>
 
-<a id="115" class="Keyword">open</a> <a id="120" class="Keyword">import</a> <a id="127" href="Data.Nat.Properties.html" class="Module">Data.Nat.Properties</a> <a id="147" class="Symbol">as</a> <a id="150" class="Module">ℕ</a> <a id="152" class="Keyword">public</a>
-  <a id="161" class="Keyword">using</a> <a id="167" class="Symbol">(</a>
-    <a id="173" href="Data.Nat.Properties.html#14663" class="Function">+-suc</a><a id="178" class="Symbol">;</a> <a id="180" href="Data.Nat.Properties.html#15204" class="Function">+-comm</a>
-  <a id="189" class="Symbol">)</a>
+<a id="139" class="Keyword">open</a> <a id="144" class="Keyword">import</a> <a id="151" href="Data.Nat.Properties.html" class="Module">Data.Nat.Properties</a> <a id="171" class="Symbol">as</a> <a id="174" class="Module">ℕ</a> <a id="176" class="Keyword">public</a>
+  <a id="185" class="Keyword">using</a> <a id="191" class="Symbol">(</a>
+    <a id="197" href="Data.Nat.Properties.html#14663" class="Function">+-suc</a><a id="202" class="Symbol">;</a> <a id="204" href="Data.Nat.Properties.html#15204" class="Function">+-comm</a>
+  <a id="213" class="Symbol">)</a>
 </pre></body></html>
